# boost.app.cmake

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
ext/log4cplus/: CMakeLists.txt
hdr/zmqapp/: zmqapp.hpp
samples/: CMakeLists.txt  application_mode_select.cpp  simple_application.cpp  simple_server_application_help.cpp  termination_handler.cpp  work_queue.cpp
src/: CMakeLists.txt  console_server_app.cpp  handling_errors_ec_version.cpp  handling_errors_ex_version.cpp  server_app.cpp  service_setup.cpp  simple_server_application.cpp  simple_server_application_help.cpp  termination_handler.cpp  wait_for_termination_request.cpp  work_queue.cpp  zmqapp_clnt.cpp  zmqapp_srv.cpp
src/cppcheck/reports/server/: server_app.cpp.rpt
test/: CMakeLists.txt
